--- a/movie_rating _prediction.ipynb
+++ b/movie_rating _prediction.ipynb
@@ -35,6 +35,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50ed2ec6",
+   "metadata": {},
+   "source": [
+    "Preprocess"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "8d5beef9",
@@ -65,6 +73,14 @@
     "movie_data.head()\n",
     "movie_data.isnull().sum()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b34d12e3",
+   "metadata": {},
+   "source": [
+    "remove null rows"
    ]
   },
   {
@@ -306,6 +322,14 @@
    "source": [
     "movie_data.dropna(inplace=True)\n",
     "movie_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99241180",
+   "metadata": {},
+   "source": [
+    "remove duplictes"
    ]
   },
   {
