--- a/movie_rating _prediction.ipynb
+++ b/movie_rating _prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 189,
    "id": "6f960a10",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import accuracy_score,r2_score,mean_absolute_error,mean_squared_error\n"
    ]
   },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 190,
    "id": "f62cf356",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 191,
    "id": "8d5beef9",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 192,
    "id": "5f0056f9",
    "metadata": {},
    "outputs": [],
@@ -104,17 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "0044a410",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movie_data.dropna(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 193,
    "id": "66440301",
    "metadata": {},
    "outputs": [
@@ -254,7 +244,7 @@
        "5  Bobby Deol  Aishwarya Rai Bachchan    Shammi Kapoor  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,13 +261,12 @@
     "\n",
     "\n",
     "duplicate = movie_data.groupby(['Name', 'Year']).filter(lambda x: len(x) > 1)\n",
-    "duplicate.head(5)\n",
-    "movie_data.drop_duplicates(subset=['Name'],keep=False)"
+    "duplicate.head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 194,
    "id": "dae2e534",
    "metadata": {},
    "outputs": [
@@ -286,33 +275,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 11979 entries, 1 to 15508\n",
+      "Index: 12008 entries, 1 to 15508\n",
       "Data columns (total 9 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   Year      11979 non-null  int32  \n",
-      " 1   Duration  11979 non-null  int64  \n",
-      " 2   Genre     11979 non-null  object \n",
-      " 3   Rating    11979 non-null  float64\n",
-      " 4   Votes     11979 non-null  int64  \n",
-      " 5   Director  11979 non-null  object \n",
-      " 6   Actor 1   11979 non-null  object \n",
-      " 7   Actor 2   11979 non-null  object \n",
-      " 8   Actor 3   11979 non-null  object \n",
+      " 0   Year      12008 non-null  int32  \n",
+      " 1   Duration  12008 non-null  int64  \n",
+      " 2   Genre     12008 non-null  object \n",
+      " 3   Rating    12008 non-null  float64\n",
+      " 4   Votes     12008 non-null  int64  \n",
+      " 5   Director  12008 non-null  object \n",
+      " 6   Actor 1   12008 non-null  object \n",
+      " 7   Actor 2   12008 non-null  object \n",
+      " 8   Actor 3   12008 non-null  object \n",
       "dtypes: float64(1), int32(1), int64(2), object(5)\n",
-      "memory usage: 889.1+ KB\n"
+      "memory usage: 891.2+ KB\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "movie_data.drop_duplicates(subset=['Name'],keep=False)\n",
     "movie_data.drop('Name',axis=1,inplace=True)\n",
     "movie_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 195,
    "id": "6bac59b8",
    "metadata": {},
    "outputs": [
@@ -433,7 +422,7 @@
        "      <td>Bobby Deol</td>\n",
        "      <td>Aishwarya Rai Bachchan</td>\n",
        "      <td>Shammi Kapoor</td>\n",
-       "      <td>5.875793</td>\n",
+       "      <td>5.882451</td>\n",
        "      <td>5.335135</td>\n",
        "      <td>4.793617</td>\n",
        "      <td>5.730000</td>\n",
@@ -467,7 +456,7 @@
        "      <td>Chiranjeevi</td>\n",
        "      <td>Jayamalini</td>\n",
        "      <td>Rajinikanth</td>\n",
-       "      <td>5.875793</td>\n",
+       "      <td>5.882451</td>\n",
        "      <td>6.290476</td>\n",
        "      <td>6.377419</td>\n",
        "      <td>5.800000</td>\n",
@@ -501,7 +490,7 @@
        "      <td>Akshay Kumar</td>\n",
        "      <td>Twinkle Khanna</td>\n",
        "      <td>Aruna Irani</td>\n",
-       "      <td>5.875793</td>\n",
+       "      <td>5.882451</td>\n",
        "      <td>5.175000</td>\n",
        "      <td>5.440845</td>\n",
        "      <td>4.603704</td>\n",
@@ -535,7 +524,7 @@
        "      <td>Dharmendra</td>\n",
        "      <td>Jaya Prada</td>\n",
        "      <td>Arjun Sarja</td>\n",
-       "      <td>5.875793</td>\n",
+       "      <td>5.882451</td>\n",
        "      <td>4.090625</td>\n",
        "      <td>6.045128</td>\n",
        "      <td>5.632558</td>\n",
@@ -543,7 +532,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11979 rows × 14 columns</p>\n",
+       "<p>12008 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -565,13 +554,13 @@
        "3                  Ishita Raj  Siddhant Kapoor     5.838423        4.400000   \n",
        "3                  Ishita Raj  Siddhant Kapoor     5.838739        4.400000   \n",
        "5      Aishwarya Rai Bachchan    Shammi Kapoor     5.838423        5.335135   \n",
-       "5      Aishwarya Rai Bachchan    Shammi Kapoor     5.875793        5.335135   \n",
+       "5      Aishwarya Rai Bachchan    Shammi Kapoor     5.882451        5.335135   \n",
        "...                       ...              ...          ...             ...   \n",
-       "15503              Jayamalini      Rajinikanth     5.875793        6.290476   \n",
+       "15503              Jayamalini      Rajinikanth     5.882451        6.290476   \n",
        "15505          Twinkle Khanna      Aruna Irani     5.511985        5.175000   \n",
-       "15505          Twinkle Khanna      Aruna Irani     5.875793        5.175000   \n",
+       "15505          Twinkle Khanna      Aruna Irani     5.882451        5.175000   \n",
        "15508              Jaya Prada      Arjun Sarja     5.511985        4.090625   \n",
-       "15508              Jaya Prada      Arjun Sarja     5.875793        4.090625   \n",
+       "15508              Jaya Prada      Arjun Sarja     5.882451        4.090625   \n",
        "\n",
        "       Actor_1_group  Actor_2_group  Actor_3_group  \n",
        "1           6.850000       7.000000       7.000000  \n",
@@ -586,10 +575,10 @@
        "15508       6.045128       5.632558       5.780000  \n",
        "15508       6.045128       5.632558       5.780000  \n",
        "\n",
-       "[11979 rows x 14 columns]"
+       "[12008 rows x 14 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,13 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 196,
    "id": "3ef83a22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model1=LogisticRegression()\n",
-    "model2=RandomForestClassifier()\n",
+    "model=RandomForestRegressor()\n",
     "x=movie_data[['Year','Votes','Duration','Genre_group','Director_group','Actor_1_group','Actor_2_group','Actor_3_group']]\n",
     "y=movie_data[['Rating']]\n",
     "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2,random_state=20)"
@@ -632,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 197,
    "id": "46977958",
    "metadata": {},
    "outputs": [
@@ -640,52 +628,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:1310: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown label type: continuous. Maybe you are trying to fit a classifier, which expects discrete classes on a regression target with continuous values.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[121], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmodel1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m model2\u001b[38;5;241m.\u001b[39mfit(x_train,y_train)\n\u001b[0;32m      3\u001b[0m log_pred\u001b[38;5;241m=\u001b[39mmodel1\u001b[38;5;241m.\u001b[39mpredict(x_test,y_test)\n",
-      "File \u001b[1;32mc:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:1473\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1466\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[0;32m   1468\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m   1469\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m   1470\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m   1471\u001b[0m     )\n\u001b[0;32m   1472\u001b[0m ):\n\u001b[1;32m-> 1473\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1231\u001b[0m, in \u001b[0;36mLogisticRegression.fit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m   1221\u001b[0m     _dtype \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39mfloat64, np\u001b[38;5;241m.\u001b[39mfloat32]\n\u001b[0;32m   1223\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(\n\u001b[0;32m   1224\u001b[0m     X,\n\u001b[0;32m   1225\u001b[0m     y,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1229\u001b[0m     accept_large_sparse\u001b[38;5;241m=\u001b[39msolver \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mliblinear\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msag\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msaga\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1230\u001b[0m )\n\u001b[1;32m-> 1231\u001b[0m \u001b[43mcheck_classification_targets\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1232\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclasses_ \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(y)\n\u001b[0;32m   1234\u001b[0m \u001b[38;5;66;03m# TODO(1.7) remove multi_class\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\multiclass.py:221\u001b[0m, in \u001b[0;36mcheck_classification_targets\u001b[1;34m(y)\u001b[0m\n\u001b[0;32m    213\u001b[0m y_type \u001b[38;5;241m=\u001b[39m type_of_target(y, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    214\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_type \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[0;32m    215\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulticlass\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    219\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultilabel-sequences\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    220\u001b[0m ]:\n\u001b[1;32m--> 221\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    222\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnknown label type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_type\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Maybe you are trying to fit a \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    223\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclassifier, which expects discrete classes on a \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    224\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregression target with continuous values.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    225\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown label type: continuous. Maybe you are trying to fit a classifier, which expects discrete classes on a regression target with continuous values."
+      "c:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
      ]
     }
    ],
    "source": [
-    "model1.fit(x_train,y_train)\n",
-    "model2.fit(x_train,y_train)\n",
-    "log_pred=model1.predict(x_test,y_test)\n",
-    "rand_pred=model2.predict(x_test,y_test)\n"
+    "model.fit(x_train,y_train)\n",
+    "rand_pred=model.predict(x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "5d72e811",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Regression: \n",
+      "mean_squared_error:  0.0996197597835138\n",
+      "mean_absolute_error:  0.17897876769358878\n",
+      "r2_score:  0.9475987378053492\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Random Forest Regression: ')\n",
+    "print('mean_squared_error: ',mean_squared_error(y_test,rand_pred))\n",
+    "print('mean_absolute_error: ',mean_absolute_error(y_test,rand_pred))\n",
+    "print('r2_score: ',r2_score(y_test,rand_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b0502fb",
+   "metadata": {},
+   "source": [
+    "Build interface "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d72e811",
+   "id": "68f2888c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('Logoistic Regression: ')\n",
-    "print('accuracy_score: ',accuracy_score(y_test,log_pred))\n",
-    "print('mean_squared_error: ',mean_squared_error(y_test,log_pred))\n",
-    "print('mean_absolute_error: ',mean_absolute_error(y_test,log_pred))\n",
-    "print('r2_score: ',r2_score(y_test,log_pred))\n",
-    "\n",
-    "\n",
-    "print('Random Forest Regression: ')\n",
-    "print('accuracy_score: ',accuracy_score(y_test,rand_pred))\n",
-    "print('mean_squared_error: ',mean_squared_error(y_test,rand_pred))\n",
-    "print('mean_absolute_error: ',mean_absolute_error(y_test,rand_pred))\n",
-    "print('r2_score: ',r2_score(y_test,rand_pred))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
