--- a/movie_rating _prediction.ipynb
+++ b/movie_rating _prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 26,
    "id": "6f960a10",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 27,
    "id": "f62cf356",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 28,
    "id": "8d5beef9",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 29,
    "id": "5f0056f9",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "id": "66440301",
    "metadata": {},
    "outputs": [
@@ -114,9 +114,9 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_30744\\3631088123.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_24608\\3631088123.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  movie_data['Name'] = movie_data['Name'].str.extract('([A-Za-z\\s\\'\\-]+)')\n",
-      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_30744\\3631088123.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_24608\\3631088123.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -244,7 +244,7 @@
        "5  Bobby Deol  Aishwarya Rai Bachchan    Shammi Kapoor  "
       ]
      },
-     "execution_count": 193,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 31,
    "id": "dae2e534",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 32,
    "id": "6bac59b8",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
        "[12008 rows x 14 columns]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 33,
    "id": "3ef83a22",
    "metadata": {},
    "outputs": [],
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 34,
    "id": "46977958",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 35,
    "id": "5d72e811",
    "metadata": {},
    "outputs": [
@@ -649,9 +649,9 @@
      "output_type": "stream",
      "text": [
       "Random Forest Regression: \n",
-      "mean_squared_error:  0.0996197597835138\n",
-      "mean_absolute_error:  0.17897876769358878\n",
-      "r2_score:  0.9475987378053492\n"
+      "mean_squared_error:  0.10091482972522903\n",
+      "mean_absolute_error:  0.17901040799333917\n",
+      "r2_score:  0.9469175145247098\n"
      ]
     }
    ],
@@ -672,11 +672,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "68f2888c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7866\n",
+      "Running on public URL: https://10c9b0b8f9a6cde55f.gradio.live\n",
+      "\n",
+      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"https://10c9b0b8f9a6cde55f.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Kaustubha Ram\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "def predict(name,year,votes,duration,genre_mean_rating,director_mean_rating,actor_1_mean_rating,actor_2_mean_rating,actor_3_mean_rating):\n",
+    "    year=int(year)\n",
+    "    votes=int(votes)\n",
+    "    duration=int(duration)\n",
+    "    genre_mean_rating=float(genre_mean_rating)\n",
+    "    director_mean_rating=float(director_mean_rating)\n",
+    "    actor_1_mean_rating=float(director_mean_rating)\n",
+    "    actor_2_mean_rating=float(actor_2_mean_rating)\n",
+    "    actor_3_mean_rating=float(actor_3_mean_rating)\n",
+    "    # print(year,votes,duration,genre_mean_rating,actor_1_mean_rating,actor_2_mean_rating,actor_3_mean_rating)\n",
+    "    features=[[year,votes,duration,genre_mean_rating,director_mean_rating,actor_1_mean_rating,actor_2_mean_rating,actor_3_mean_rating]]\n",
+    "    prediction=model.predict(features)[0]\n",
+    "    return prediction\n",
+    "\n",
+    "demo = gr.Interface(\n",
+    "    fn=predict,\n",
+    "    inputs=[\n",
+    "        \"text\",\n",
+    "        \"number\",\n",
+    "        \"number\",\n",
+    "        \"number\",\n",
+    "        \"number\",\n",
+    "        \"number\",\n",
+    "        \"number\",\n",
+    "        \"number\",\n",
+    "        \"number\",        \n",
+    "    ],\n",
+    "    outputs=[\"text\"],\n",
+    "    \n",
+    ")\n",
+    "demo.launch(share=True)"
+   ]
   }
  ],
  "metadata": {
