--- a/movie_rating _prediction.ipynb
+++ b/movie_rating _prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "6f960a10",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import accuracy_score,r2_score,mean_absolute_error,mean_squared_error\n"
    ]
   },
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "f62cf356",
    "metadata": {},
    "outputs": [],
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "8d5beef9",
    "metadata": {},
    "outputs": [
@@ -64,7 +65,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "5f0056f9",
    "metadata": {},
    "outputs": [],
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "66440301",
    "metadata": {},
    "outputs": [
@@ -113,9 +114,9 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_25456\\3631088123.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_29116\\3631088123.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  movie_data['Name'] = movie_data['Name'].str.extract('([A-Za-z\\s\\'\\-]+)')\n",
-      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_25456\\3631088123.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Kaustubha Ram\\AppData\\Local\\Temp\\ipykernel_29116\\3631088123.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -243,7 +244,7 @@
        "5  Bobby Deol  Aishwarya Rai Bachchan    Shammi Kapoor  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "dae2e534",
    "metadata": {},
    "outputs": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "6bac59b8",
    "metadata": {},
    "outputs": [
@@ -577,7 +578,7 @@
        "[12008 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,12 +607,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "3ef83a22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model=RandomForestRegressor()\n",
+    "model1=RandomForestRegressor()\n",
+    "model2=LinearRegression()\n",
     "x=movie_data[['Year','Votes','Duration','Genre_group','Director_group','Actor_1_group','Actor_2_group','Actor_3_group']]\n",
     "y=movie_data[['Rating']]\n",
     "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2,random_state=20)"
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "46977958",
    "metadata": {},
    "outputs": [
@@ -633,13 +635,15 @@
     }
    ],
    "source": [
-    "model.fit(x_train,y_train)\n",
-    "rand_pred=model.predict(x_test)\n"
+    "model1.fit(x_train,y_train)\n",
+    "model2.fit(x_train,y_train)\n",
+    "lin_pred=model2.predict(x_test)\n",
+    "rand_pred=model1.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "5d72e811",
    "metadata": {},
    "outputs": [
@@ -647,18 +651,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Regression: \n",
-      "mean_squared_error:  0.09789517110741051\n",
-      "mean_absolute_error:  0.1778363863447128\n",
-      "r2_score:  0.9485058934097272\n"
+      "Random Forest Regressor: \n",
+      "mean_squared_error:  0.1016911136552873\n",
+      "mean_absolute_error:  0.17933014154870958\n",
+      "r2_score:  0.9465091792923737\n",
+      "/n\n",
+      "Linear Regression: \n",
+      "mean_squared_error:  0.43576577729566723\n",
+      "mean_absolute_error:  0.4892541008332029\n",
+      "r2_score:  0.7707816521426202\n"
      ]
     }
    ],
    "source": [
-    "print('Random Forest Regression: ')\n",
+    "print('Random Forest Regressor: ')\n",
     "print('mean_squared_error: ',mean_squared_error(y_test,rand_pred))\n",
     "print('mean_absolute_error: ',mean_absolute_error(y_test,rand_pred))\n",
-    "print('r2_score: ',r2_score(y_test,rand_pred))\n"
+    "print('r2_score: ',r2_score(y_test,rand_pred))\n",
+    "print(\"/n\")\n",
+    "print('Linear Regression: ')\n",
+    "print('mean_squared_error: ',mean_squared_error(y_test,lin_pred))\n",
+    "print('mean_absolute_error: ',mean_absolute_error(y_test,lin_pred))\n",
+    "print('r2_score: ',r2_score(y_test,lin_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31595543",
+   "metadata": {},
+   "source": [
+    "Since Random Forest has higher R2_score, it will be used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c35c7f27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=model1"
    ]
   },
   {
@@ -671,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "68f2888c",
    "metadata": {},
    "outputs": [
@@ -679,8 +711,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
-      "Running on public URL: https://8d1d8e3460f8923929.gradio.live\n",
+      "Running on local URL:  http://127.0.0.1:7875\n",
+      "Running on public URL: https://fee174b74c79c68f27.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -688,7 +720,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://8d1d8e3460f8923929.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://fee174b74c79c68f27.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -701,7 +733,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
